# usb_enumerator

./: CMakeLists.txt  README.md  main.cpp  string_allocation.cpp  string_allocation.h  usb_functions.cpp  usb_functions.h
headers/: CMakeLists.txt  libusb-cpp.hpp
headers/libusb-cpp/: configuration.hpp  device.hpp  endpoint.hpp  interface.hpp  transfer.hpp
src/: CMakeLists.txt  configuration.cpp  configurationImpl.cpp  configurationImpl.hpp  device.cpp  deviceImpl.cpp  deviceImpl.hpp  endpoint.cpp  endpointImpl.cpp  endpointImpl.hpp  exception.cpp  interface.cpp  interfaceImpl.cpp  interfaceImpl.hpp  libusb-cpp.cpp  libusbImpl.cpp  transfer.cpp  transferImpl.cpp  transferImpl.hpp  wideconvert.cpp
